--- a/app/www/templates/directions.html
+++ b/app/www/templates/directions.html
@@ -1,4 +1,7 @@
 <ion-view view-title="My routes">
+<div id="myNav" style= "width: 100%" class="overlay">
+  <a href="javascript:void(0)" class="closebtn" on-hold= "record()" on-double-tap = "speakText('Directions Goodge Street to British Library. ')" on-swipe-right="goBack()">;</a>
+  </div> 
   <ion-content class="padding-top padding-bottom">
     <div class="row">
       <div class="col col-33">
@@ -9,7 +12,7 @@
     </div>
     
     <div class="directions itinerary-items">
-      <div class="card" ng-repeat="itinerary in itineraryItems">
+      <div class="card" ng-repeat="itinerary in itineraryItems track by $index">
         <div class="item item-text-wrap">{{ itinerary }}</div>
       </div>
     </div>
