--- a/app/www/templates/friends.html
+++ b/app/www/templates/friends.html
@@ -1,10 +1,12 @@
 <ion-view view-title="Friends">
-<<<<<<< HEAD
+<div id="myNav" style= "width: 100%" class="overlay">
+  <a href="javascript:void(0)" class="closebtn" on-hold= "record()" on-double-tap = "speakText()" on-swipe-right= "goBack()">;</a>
+  </div> 
       <ion-content class="padding-top padding-bottom">
         <div class="row">
           <div class="col col-33">
 
-            <a on-tap="goBack()" on-hold="speakText('Go back')"   class="icon-left button button-block button-clear button-dark ion-chevron-left">
+            <a on-tap="goBack()"  class="icon-left button button-block button-clear button-dark ion-chevron-left">
               Back
             </a>
           </div>
