--- a/app/www/templates/view_route.html
+++ b/app/www/templates/view_route.html
@@ -1,4 +1,6 @@
 <ion-view view-title="My routes">
+<a href="javascript:void(0)" class="closebtn" on-hold= "record()" on-double-tap = "speakText('Goodge street to british library. You have 2 waypoints. At goodge street nice print room cafe. At gower street meeting. Would you like to view directions? Swipe right to go back.')" on-swipe-right="goBack()">;</a>
+  </div> 
   <ion-content class="padding-top padding-bottom" scroll="false">
 
   <map on-create="mapCreated(map)" style="width: 100%; height: 100vh; position:absolute; "></map>
