--- a/app/www/css/style.css
+++ b/app/www/css/style.css
@@ -4,10 +4,33 @@
 ion-content {
   background-image: url('../img/bg2.jpg');
   background-size: cover;
+  width: 100%; 
+  min-height: 100%;
 }
+
+showButton {width:100%;height:33%;}
 
 body {
   font-family: 'Quicksand', sans-serif;
+}
+
+.overlay {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0, 0.5);
+    overflow-x: hidden;
+    transition: 0.5s;
+}
+
+.overlay .closebtn {
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
 
 .bar-header {
